src/gen/ANTLR/Jinja2Parser.java
// Generated from src/ANTLR/Jinja2Parser.g4 by ANTLR 4.13.2
package gen.ANTLR;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Jinja2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLOSE=1, WS=2, ID=3, NUMBER=4, STRING=5, PLUS=6, MINUS=7, MULT=8, DIV=9, 
		MOD=10, LPAREN=11, RPAREN=12, LBRACK=13, RBRACK=14, COMMA=15, DOT=16, 
		PIPE=17, ASSIGN=18, LT=19, GT=20, LTE=21, GTE=22, EQUAL=23, NEQ=24, AND_KW=25, 
		OR_KW=26, NOT_KW=27, IN_KW=28, IS_KW=29, NONE_KW=30, TRUE_KW=31, FALSE_KW=32, 
		IF_KW=33, FOR_KW=34, ELIF_KW=35, ELSE_KW=36, ENDIF_KW=37, ENDFOR_KW=38, 
		SET_KW=39, BLOCK_KW=40, ENDBLOCK_KW=41, EXTENDS_KW=42, INCLUDE_KW=43, 
		WITH_KW=44, WITHOUT_KW=45, CONTEXT_KW=46, IGNORE_KW=47, MISSING_KW=48, 
		EXPR_START=49, STMT_START=50, COMMENT_START=51, TEXT=52, NEWLINE=53, COMMENT_HASH=54, 
		COMMENT_CONTENT=55, COMMENT_END=56, JINJA_WS=57, TEXT_BRACE=58, JINJA_EXPR_END=59, 
		JINJA_STMT_END=60, JINJA_IF=61, JINJA_FOR=62, JINJA_ELIF=63, JINJA_ELSE=64, 
		JINJA_ENDIF=65, JINJA_ENDFOR=66, JINJA_SET=67, JINJA_BLOCK=68, JINJA_ENDBLOCK=69, 
		JINJA_EXTENDS=70, JINJA_INCLUDE=71, JINJA_WITH=72, JINJA_WITHOUT=73, JINJA_CONTEXT=74, 
		JINJA_IGNORE=75, JINJA_MISSING=76, JINJA_AND=77, JINJA_OR=78, JINJA_NOT=79, 
		JINJA_IN=80, JINJA_IS=81, JINJA_NONE=82, JINJA_TRUE=83, JINJA_FALSE=84, 
		JINJA_PLUS=85, JINJA_MINUS=86, JINJA_MULT=87, JINJA_DIV=88, JINJA_MOD=89, 
		JINJA_LT=90, JINJA_GT=91, JINJA_LTE=92, JINJA_GTE=93, JINJA_EQUAL=94, 
		JINJA_NEQ=95, JINJA_ASSIGN=96, JINJA_PIPE=97, JINJA_LPAREN=98, JINJA_RPAREN=99, 
		JINJA_LBRACK=100, JINJA_RBRACK=101, JINJA_COMMA=102, JINJA_DOT=103;
	public static final int
		RULE_template = 0, RULE_textChunk = 1, RULE_expression = 2, RULE_statement = 3, 
		RULE_stmtContent = 4, RULE_comment = 5, RULE_commentBody = 6, RULE_ifStmt = 7, 
		RULE_elifClause = 8, RULE_elseClause = 9, RULE_forStmt = 10, RULE_forInit = 11, 
		RULE_idList = 12, RULE_setStmt = 13, RULE_blockStmt = 14, RULE_extendsStmt = 15, 
		RULE_includeStmt = 16, RULE_withStmt = 17, RULE_bodyContent = 18, RULE_expr = 19, 
		RULE_orExpr = 20, RULE_andExpr = 21, RULE_notExpr = 22, RULE_comparison = 23, 
		RULE_compOp = 24, RULE_concat = 25, RULE_pipeExpr = 26, RULE_term = 27, 
		RULE_factor = 28, RULE_unary = 29, RULE_atom = 30, RULE_literal = 31, 
		RULE_argList = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "textChunk", "expression", "statement", "stmtContent", "comment", 
			"commentBody", "ifStmt", "elifClause", "elseClause", "forStmt", "forInit", 
			"idList", "setStmt", "blockStmt", "extendsStmt", "includeStmt", "withStmt", 
			"bodyContent", "expr", "orExpr", "andExpr", "notExpr", "comparison", 
			"compOp", "concat", "pipeExpr", "term", "factor", "unary", "atom", "literal", 
			"argList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'{{'", "'{%'", "'{#'", null, null, "'#'", null, "'#}'", null, 
			"'{'", "'}}'", "'%}'", "'if'", "'for'", "'elif'", "'else'", "'endif'", 
			"'endfor'", "'set'", "'block'", "'endblock'", "'extends'", "'include'", 
			"'with'", "'without'", "'context'", "'ignore'", "'missing'", "'and'", 
			"'or'", "'not'", "'in'", "'is'", "'None'", "'True'", "'False'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
			"'='", "'|'", "'('", "')'", "'['", "']'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLOSE", "WS", "ID", "NUMBER", "STRING", "PLUS", "MINUS", "MULT", 
			"DIV", "MOD", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "DOT", 
			"PIPE", "ASSIGN", "LT", "GT", "LTE", "GTE", "EQUAL", "NEQ", "AND_KW", 
			"OR_KW", "NOT_KW", "IN_KW", "IS_KW", "NONE_KW", "TRUE_KW", "FALSE_KW", 
			"IF_KW", "FOR_KW", "ELIF_KW", "ELSE_KW", "ENDIF_KW", "ENDFOR_KW", "SET_KW", 
			"BLOCK_KW", "ENDBLOCK_KW", "EXTENDS_KW", "INCLUDE_KW", "WITH_KW", "WITHOUT_KW", 
			"CONTEXT_KW", "IGNORE_KW", "MISSING_KW", "EXPR_START", "STMT_START", 
			"COMMENT_START", "TEXT", "NEWLINE", "COMMENT_HASH", "COMMENT_CONTENT", 
			"COMMENT_END", "JINJA_WS", "TEXT_BRACE", "JINJA_EXPR_END", "JINJA_STMT_END", 
			"JINJA_IF", "JINJA_FOR", "JINJA_ELIF", "JINJA_ELSE", "JINJA_ENDIF", "JINJA_ENDFOR", 
			"JINJA_SET", "JINJA_BLOCK", "JINJA_ENDBLOCK", "JINJA_EXTENDS", "JINJA_INCLUDE", 
			"JINJA_WITH", "JINJA_WITHOUT", "JINJA_CONTEXT", "JINJA_IGNORE", "JINJA_MISSING", 
			"JINJA_AND", "JINJA_OR", "JINJA_NOT", "JINJA_IN", "JINJA_IS", "JINJA_NONE", 
			"JINJA_TRUE", "JINJA_FALSE", "JINJA_PLUS", "JINJA_MINUS", "JINJA_MULT", 
			"JINJA_DIV", "JINJA_MOD", "JINJA_LT", "JINJA_GT", "JINJA_LTE", "JINJA_GTE", 
			"JINJA_EQUAL", "JINJA_NEQ", "JINJA_ASSIGN", "JINJA_PIPE", "JINJA_LPAREN", 
			"JINJA_RPAREN", "JINJA_LBRACK", "JINJA_RBRACK", "JINJA_COMMA", "JINJA_DOT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jinja2Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Jinja2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Jinja2Parser.EOF, 0); }
		public List<TextChunkContext> textChunk() {
			return getRuleContexts(TextChunkContext.class);
		}
		public TextChunkContext textChunk(int i) {
			return getRuleContext(TextChunkContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8444249301319680L) != 0)) {
				{
				setState(70);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TEXT:
					{
					setState(66);
					textChunk();
					}
					break;
				case EXPR_START:
					{
					setState(67);
					expression();
					}
					break;
				case STMT_START:
					{
					setState(68);
					statement();
					}
					break;
				case COMMENT_START:
					{
					setState(69);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextChunkContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(Jinja2Parser.TEXT, 0); }
		public TextChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textChunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterTextChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitTextChunk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitTextChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextChunkContext textChunk() throws RecognitionException {
		TextChunkContext _localctx = new TextChunkContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_textChunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode EXPR_START() { return getToken(Jinja2Parser.EXPR_START, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(Jinja2Parser.CLOSE, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(EXPR_START);
			setState(80);
			expr();
			setState(81);
			match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode STMT_START() { return getToken(Jinja2Parser.STMT_START, 0); }
		public StmtContentContext stmtContent() {
			return getRuleContext(StmtContentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(STMT_START);
			setState(84);
			stmtContent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContentContext extends ParserRuleContext {
		public StmtContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtContent; }
	 
		public StmtContentContext() { }
		public void copyFrom(StmtContentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SetContentContext extends StmtContentContext {
		public SetStmtContext setStmt() {
			return getRuleContext(SetStmtContext.class,0);
		}
		public SetContentContext(StmtContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterSetContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitSetContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitSetContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForContentContext extends StmtContentContext {
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public ForContentContext(StmtContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterForContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitForContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitForContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfContentContext extends StmtContentContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public IfContentContext(StmtContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterIfContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitIfContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitIfContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WithContentContext extends StmtContentContext {
		public WithStmtContext withStmt() {
			return getRuleContext(WithStmtContext.class,0);
		}
		public WithContentContext(StmtContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterWithContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitWithContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitWithContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlockContentContext extends StmtContentContext {
		public BlockStmtContext blockStmt() {
			return getRuleContext(BlockStmtContext.class,0);
		}
		public BlockContentContext(StmtContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterBlockContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitBlockContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitBlockContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExtendsContentContext extends StmtContentContext {
		public ExtendsStmtContext extendsStmt() {
			return getRuleContext(ExtendsStmtContext.class,0);
		}
		public ExtendsContentContext(StmtContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterExtendsContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitExtendsContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitExtendsContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IncludeContentContext extends StmtContentContext {
		public IncludeStmtContext includeStmt() {
			return getRuleContext(IncludeStmtContext.class,0);
		}
		public IncludeContentContext(StmtContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterIncludeContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitIncludeContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitIncludeContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContentContext stmtContent() throws RecognitionException {
		StmtContentContext _localctx = new StmtContentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmtContent);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF_KW:
				_localctx = new IfContentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				ifStmt();
				}
				break;
			case FOR_KW:
				_localctx = new ForContentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				forStmt();
				}
				break;
			case SET_KW:
				_localctx = new SetContentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				setStmt();
				}
				break;
			case BLOCK_KW:
				_localctx = new BlockContentContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				blockStmt();
				}
				break;
			case EXTENDS_KW:
				_localctx = new ExtendsContentContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				extendsStmt();
				}
				break;
			case INCLUDE_KW:
				_localctx = new IncludeContentContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				includeStmt();
				}
				break;
			case WITH_KW:
				_localctx = new WithContentContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				withStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
	 
		public CommentContext() { }
		public void copyFrom(CommentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NoBodyCommentContext extends CommentContext {
		public TerminalNode COMMENT_START() { return getToken(Jinja2Parser.COMMENT_START, 0); }
		public TerminalNode COMMENT_END() { return getToken(Jinja2Parser.COMMENT_END, 0); }
		public NoBodyCommentContext(CommentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterNoBodyComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitNoBodyComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitNoBodyComment(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BodyCommentContext extends CommentContext {
		public TerminalNode COMMENT_START() { return getToken(Jinja2Parser.COMMENT_START, 0); }
		public CommentBodyContext commentBody() {
			return getRuleContext(CommentBodyContext.class,0);
		}
		public TerminalNode COMMENT_END() { return getToken(Jinja2Parser.COMMENT_END, 0); }
		public BodyCommentContext(CommentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterBodyComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitBodyComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitBodyComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comment);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new NoBodyCommentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(COMMENT_START);
				setState(96);
				match(COMMENT_END);
				}
				break;
			case 2:
				_localctx = new BodyCommentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(COMMENT_START);
				setState(98);
				commentBody();
				setState(99);
				match(COMMENT_END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
